--- a/VMS/Areas/Admin/Views/Home/Index.cshtml
+++ b/VMS/Areas/Admin/Views/Home/Index.cshtml
@@ -3,6 +3,30 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Test on Runtime comp.</p>
+    <h1 class="display-4"><i>Volunteer Management System</i></h1>
 </div>
+
+<div class="row" style="margin-top: 5%">
+    <div class="col-3">
+        <form id="login" method="post">
+            <div class="form-group">
+                <label for="Admin_Name">User Name:</label>
+                <input class="form-control" type="text" id="Admin_Name" value=" "/>
+                <span class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label for="Admin_Password">Password:</label>
+                <input class="form-control" type="password" id="Admin_Password" value="" />
+                <span class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <button id="login_submit" type="submit" class="btn btn-primary">Log in</button>
+                <button id="login_clear" type="reset" class="btn btn-outline-primary">Reset</button>
+            </div>
+        </form><!--Note to self: Justin Stop Screwing up form tags! Slow Down!-->
+
+    </div>
+</div>
+
+
+
