--- a/VMS/Areas/Admin/Views/Home/Index.cshtml
+++ b/VMS/Areas/Admin/Views/Home/Index.cshtml
@@ -1,5 +1,7 @@
-﻿@{
+﻿@model VMS.Models.ViewModels.LoginViewModel
+@{
     ViewData["Title"] = "Home Page";
+    Layout = "_LayoutLogin";
 }
 
 <div class="text-center">
@@ -10,13 +12,13 @@
     <div class="col-3">
         <form id="login" method="post">
             <div class="form-group">
-                <label for="Admin_Name">User Name:</label>
-                <input class="form-control" type="text" id="Admin_Name" value=" "/>
+                <label asp-for="User">User Name:</label>
+                <input asp-for="User" class="form-control" type="text" id="User" value=""/>
                 <span class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label for="Admin_Password">Password:</label>
-                <input class="form-control" type="password" id="Admin_Password" value="" />
+                <label asp-for="Password">Password:</label>
+                <input asp-for="Password" class="form-control" type="password" id="Password" value="" />
                 <span class="text-danger"></span>
             </div>
             <div class="form-group">
