--- a/VMS/Areas/Admin/Views/Home/Index.cshtml
+++ b/VMS/Areas/Admin/Views/Home/Index.cshtml
@@ -12,14 +12,14 @@
     <div class="col-3">
         <form id="login" method="post">
             <div class="form-group">
-                <label asp-for="User">User Name:</label>
-                <input asp-for="User" class="form-control" type="text" id="User" value=""/>
-                <span class="text-danger"></span>
+                <label asp-for="UserName">User Name:</label>
+                <input asp-for="UserName" class="form-control" type="text" id="UserName" value=""/>
+                <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Password">Password:</label>
                 <input asp-for="Password" class="form-control" type="password" id="Password" value="" />
-                <span class="text-danger"></span>
+                <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <button id="login_submit" type="submit" class="btn btn-primary">Log in</button>
@@ -29,6 +29,23 @@
 
     </div>
 </div>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+@if (ViewBag.Message != null)
+{
+    <script>
+        swal({
+            title: "Failed Login",
+            text: "Please try again",
+            icon: "error"
+        });
+    </script>
+}
+
+
+@section Scripts{
+    <partial name="_ValidationScriptsPartial" />
+
+}
 
 
 
