setup privacy page built logo updated both layout pages for easier use with the team

--- a/VMS/Areas/Admin/Views/Home/Privacy.cshtml
+++ b/VMS/Areas/Admin/Views/Home/Privacy.cshtml
@@ -1,6 +1,20 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
+    Layout = "_LayoutLogin";
 }
-<h1>@ViewData["Title"]</h1>
+<h1 class="text-center"><u>@ViewData["Title"]</u></h1>
 
 
+<div style="margin-top:2%">
+    <div>
+        <img src="~/images/404 Solutions Logo.png" class="float-left"/>
+    </div>
+    <br />
+    <div class="offset-4">
+        <p>This project was built for CIS-4327 at the University of North Florida.</p>
+        <p>While we thank you for looking over it we ask you that you do not copy our work please.</p>
+        <p>If you are having issues with your projects and need help please don't hesitate to send me "n01414359" (personally) an email 
+            at the schools email account. I will do whatever I can to help you, to prevent you from having to copy this.</p>
+        <p>Thank you</p>
+    </div>
+</div>
