--- a/VMS/Views/Shared/_LayoutLogin.cshtml
+++ b/VMS/Views/Shared/_LayoutLogin.cshtml
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Volunteer Management System Test</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Volunteer Management System</a>
             </div>
         </nav>
     </header>
