--- a/VMS/Areas/Admin/Views/Home/Index.cshtml
+++ b/VMS/Areas/Admin/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
         <form id="login" method="post">
             <div class="form-group">
                 <label asp-for="UserName">User Name:</label>
-                <input asp-for="UserName" class="form-control" type="text" id="UserName" value=""/>
+                <input asp-for="UserName" class="form-control" type="text" id="UserName" value="" />
                 <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -25,7 +25,8 @@
                 <button id="login_submit" type="submit" class="btn btn-primary">Log in</button>
                 <button id="login_clear" type="reset" class="btn btn-outline-primary">Reset</button>
             </div>
-        </form><!--Note to self: Justin Stop Screwing up form tags! Slow Down!-->
+            <!--Note to self: Justin Stop Screwing up form tags! Slow Down!-->
+        </form>
 
     </div>
 </div>
