fixed spelling - Don't ask I am tired

--- a/VMS/Areas/Admin/Views/Home/Index.cshtml
+++ b/VMS/Areas/Admin/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
                 <button id="login_submit" type="submit" class="btn btn-primary">Log in</button>
                 <button id="login_clear" type="reset" class="btn btn-outline-primary">Reset</button>
             </div>
-            <!--Note to self: Justin Stop Screwing up form tags! Slow Down!-->
+            <!--Note to self: Justin Stop Screwing up form tags! -- Slow Down!-->
         </form>
 
     </div>
