--- a/VMS/Views/Shared/_Layout.cshtml
+++ b/VMS/Views/Shared/_Layout.cshtml
@@ -15,26 +15,27 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary border-bottom box-shadow mb-3">
             <div class="container">
-                @*<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Don't Know if I like this idea</a>*@
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Volunteer Management System</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                @*<div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item dropdown">
+                        <li class="nav-item dropdown">*@
                             @*taken directly from https://getbootstrap.com/docs/4.0/components/navbar/ - find the dropdown in the code and copy.*@
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            @*<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Administrator Options
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Manage Volunteers</a>
-                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="Volunteer" asp-action="Index">Manage Volunteers</a>*@
+                                @*<a class="dropdown-item" href="#">Manage Volunteers</a>*@
+                                @*<div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Manage Opportunities</a>
                             </div>
                         </li>
                     </ul>
-                </div>
+                </div>*@
                 <div class="nav-item">
                     <a class="nav-link; text-white" asp-area="" asp-controller="Home" asp-action="Index">Logout</a>
                 </div>
