--- a/VMS/Areas/Admin/Views/Volunteer/Index.cshtml
+++ b/VMS/Areas/Admin/Views/Volunteer/Index.cshtml
@@ -45,10 +45,13 @@
     <table id="tblData" class="table table-striped table-bordered" style="width:100%">
         <thead class="thead-dark">
             <tr class="table-info">
-                <th>Volunteer First Name</th>
-                <th>Volunteer Last Name</th>
+                <th>First Name</th>
+                <th>Last Name</th>
                 <th>Approval Status</th>
                 <th>Active</th>
+                <th>Availability</th>
+                <th>Driver's License</th>
+                <th>Sociel Security</th>
                 <th></th>           @*extra header for the Edit and Delete buttons*@
             </tr>
     </thead>
