Revised Volunteer and Opportunity tables

--- a/VMS/Areas/Admin/Views/Opportunity/Index.cshtml
+++ b/VMS/Areas/Admin/Views/Opportunity/Index.cshtml
@@ -7,10 +7,6 @@
 <br />
 <h1 class="text-primary">Manage Opportunities</h1>
 <br />
-<div class="col-5 text-left">
-    <a class="btn btn-primary btn-block" asp-area="Admin" asp-controller="Opportunity" asp-action="Index"> &nbsp; View Volunteer Opportunity Matches</a>
-</div>
-<br />
 <br />
 <div class="row">
     <div class="col-6">
@@ -42,6 +38,7 @@
                 <th>Center Type</th>
                 <th>Date Posted</th>
                 <th>Open</th>
+                <th></th>           @*extra header for Matches button*@
                 <th></th>           @*extra header for the Edit and Delete buttons*@
             </tr>
         </thead>
