--- a/VMS/Areas/Admin/Views/Volunteer/Index.cshtml
+++ b/VMS/Areas/Admin/Views/Volunteer/Index.cshtml
@@ -7,10 +7,6 @@
 <br />
 <h1 class="text-primary">Manage Volunteers</h1>
 <br />
-<div class="col-5 text-left">
-    <a class="btn btn-primary btn-block" asp-area="Admin" asp-controller="Volunteer" asp-action="Index"> &nbsp; View Volunteer Opportunity Matches</a>
-</div>
-<br />
 <br />
 <div class="row">
     <div class="col-6">
@@ -52,6 +48,7 @@
                 <th>Availability</th>
                 <th>Driver's License</th>
                 <th>Sociel Security</th>
+                <th></th>           @*extra header for Matches button*@
                 <th></th>           @*extra header for the Edit and Delete buttons*@
             </tr>
     </thead>
