Filters for Volunteer page

--- a/VMS/Areas/Admin/Views/Volunteer/Index.cshtml
+++ b/VMS/Areas/Admin/Views/Volunteer/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Index";
     Layout = "_Layout";
 }
@@ -22,17 +21,17 @@
         Change Volunteer Filter
     </button>
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="#">Approved / Pending Approval</a>
+        <a class="dropdown-item" href="#" onclick="filterMultiple('Approved|Pending')">Approved/Pending Approval</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Approved</a>
+        <a class="dropdown-item" href="#" onclick="filter('Approved')">Approved</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Pending Approval</a>
+        <a class="dropdown-item" href="#" onclick="filter('Pending')">Pending Approval</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Disapproved</a>
+        <a class="dropdown-item" href="#" onclick="filter('Disapproved')">Disapproved</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Inactive</a>
+        <a class="dropdown-item" href="#" onclick="filterByColumn()">Inactive</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">All</a>
+        <a class="dropdown-item" href="#" onclick="filter('')">All</a>
 
     </div>
 </div>
