--- a/VMS/Areas/Admin/Views/Volunteer/Index.cshtml
+++ b/VMS/Areas/Admin/Views/Volunteer/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using VMS.Utility
+@{
     ViewData["Title"] = "Index";
     Layout = "_Layout";
 }
@@ -21,17 +22,17 @@
         Change Volunteer Filter
     </button>
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="#" onclick="filterMultiple('Approved|Pending')">Approved/Pending Approval</a>
+        <a class="dropdown-item" href="#" onclick="filterVolunteers('@SD.Filter_Approved_Pending')">Approved/Pending Approval</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#" onclick="filter('Approved')">Approved</a>
+        <a class="dropdown-item" href="#" onclick="filterVolunteers('@SD.Filter_Approved')">Approved</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#" onclick="filter('Pending')">Pending Approval</a>
+        <a class="dropdown-item" href="#" onclick="filterVolunteers('@SD.Filter_Pending')">Pending Approval</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#" onclick="filter('Disapproved')">Disapproved</a>
+        <a class="dropdown-item" href="#" onclick="filterVolunteers('@SD.Filter_Disapproved')">Disapproved</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#" onclick="filterByColumn()">Inactive</a>
+        <a class="dropdown-item" href="#" onclick="filterVolunteers('@SD.Filter_Inactive')">Inactive</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#" onclick="filter('')">All</a>
+        <a class="dropdown-item" href="#" onclick="filterVolunteers('')">All</a>
 
     </div>
 </div>
