--- a/VMS/Areas/Admin/Views/Opportunity/Index.cshtml
+++ b/VMS/Areas/Admin/Views/Opportunity/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@using VMS.Utility
 @{
     ViewData["Title"] = "Index";
     Layout = "_Layout";
@@ -17,18 +17,39 @@
     </div>
 </div>
 <br />
-<div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
+<div class="btn-group">
+    <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Change Opportunity Filter
     </button>
-    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="#">Most Recent (60 days)</a>
+    <div class="dropdown-menu">
+        <a class="dropdown-item" href="#" onclick="filterOpportunities('@SD.Filter_Date')">Most Recent (60 days)</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">By Center Type</a>
+        <div class="dropdown-submenu">
+            <a class="dropdown-item dropdown-toggle" type="button" data-toggle="dropdown" href="#">By Center Type</a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="#" onclick="filterOpportunities('@SD.Center_Emergency')">@SD.Center_Emergency</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#" onclick="filterOpportunities('@SD.Center_Medical')">@SD.Center_Medical</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#" onclick="filterOpportunities('@SD.Center_Mental')">@SD.Center_Mental</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#" onclick="filterOpportunities('@SD.Center_Hospice')">@SD.Center_Hospice</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#" onclick="filterOpportunities('@SD.Center_Senior')">@SD.Center_Senior</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#" onclick="filterOpportunities('@SD.Center_Youth')">@SD.Center_Youth</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#" onclick="filterOpportunities('@SD.Center_Homeless')">@SD.Center_Homeless</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#" onclick="filterOpportunities('@SD.Center_Pet')">@SD.Center_Pet</a>
+            </div>
+        </div>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">All</a>
+        <a class="dropdown-item" href="#" onclick="filterOpportunities('')">All</a>
     </div>
 </div>
+
 
 <div class="p-4 border rounded">
     <table id="tblData" class="table table-striped table-bordered" style="width:100%">
