--- a/VMS/wwwroot/css/site.css
+++ b/VMS/wwwroot/css/site.css
@@ -199,3 +199,14 @@ body {
     width: 210px !important;
     margin: 0 auto;
 }
+
+
+
+.dropdown-submenu {
+    position: relative;
+}
+
+    .dropdown-submenu .dropdown-menu {
+        top: 0;
+        left: 100%;
+    }
