--- a/VMS/Views/Shared/_CreateAndBackToListButton.cshtml
+++ b/VMS/Views/Shared/_CreateAndBackToListButton.cshtml
@@ -1,9 +1,8 @@
-﻿<div class="">
-    <div class="">
-        <button type="submit" class="btn btn-primary form-control">Create</button>
+﻿<div class="container">
+    <div class="row">
+        <div>
+            <button type="submit" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 btn btn btn-primary form-control">Create</button>
+            <a asp-action="Index" class=" col-lg-12 col-md-12 col-sm-12 col-xs-12 btn btn-success form-control">Back to List</a>
+        </div>
     </div>
-    <br>
-    <div class="">
-        <a asp-action="Index" class="btn btn-success form-control">Back to List</a>
-    </div>
-</div>
+ </div>
