--- a/VMS/Areas/Admin/Views/Opportunity/Upsert.cshtml
+++ b/VMS/Areas/Admin/Views/Opportunity/Upsert.cshtml
@@ -5,100 +5,74 @@
     var title = "Create Opportunity";
 }
 
-<form method="post">
-    <div asp-validation-summary="ModelOnly" class="test-danger"></div>
-    @if (Model.Id != 0)
-    {
-        //edit
-        title = "Edit Opportunity";
-
-    }
-
-    <div class="">
-        <h2 class="text-primary">@title</h2>
-    </div>
-    <!---------------------------------------------->
-    <div class="container">
-        <div class="row">
-
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                <div class="">
-                    <label asp-for="OpportunityName">Opportunity Name</label>
-                </div>
-                <div class="">
-                    <input asp-for="OpportunityName" class="form-control" />
-                    <span asp-validation-for="OpportunityName"></span>
-                </div>
+    <br />
+    <form method="post">
+        <div class="row p-3 border">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @if (Model.Id != 0)
+            {
+                //edit
+                title = "Edit Opportunity";
+            }
+            
+            <div class="col-12 border-bottom">
+                <h2 class="text-primary">@title</h2>
             </div>
-
-            <!---------------------------------------------->
-            <!---------------------------------------------->
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                <div class="">
-                    <div class="">
+            <div class="col-8 pt-4">
+                <div class="form-group row">
+                    <div class="col-4">
+                        <label asp-for="OpportunityName">Opportunity Name</label>
+                    </div>
+                    <div class="col-6">
+                        <input asp-for="OpportunityName" class="form-control" />
+                        <span asp-validation-for="OpportunityName" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-4">
                         <label asp-for="DatePosted">Date Posted</label>
                     </div>
-                    <div class="">
-                        <input asp-for="DatePosted" class="form-control" />
-                        <span asp-validation-for="DatePosted"></span>
+                    <div class="col-6">
+                        <input type="date" asp-for="DatePosted" class="form-control" value="yyyy-mm-dd" min="2000-01-01" />
+                        <span asp-validation-for="DatePosted" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-4">
+                        <label asp-for="CenterType">Center Type</label>
+                    </div>
+                    <div class="col-6">
+                        <input asp-for="CenterType" class="form-control" />
+                        <span asp-validation-for="CenterType" class="text-danger"></span>
+                    </div>
+                </div>
+   
+                <input type="hidden" asp-for="VolunteerId" class="form-control" />
+                <span asp-validation-for="VolunteerId" class="text-danger"></span>
+
+                <div class="form-group row">
+                    <div class="col-3">
+                        <label asp-for="IsOpen">Open Opportunity</label>
+                    </div>
+                    <div class="col-3">
+                        <input type="checkbox" asp-for="IsOpen" class="form-control" />
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-8 offset-4">
+                        @if (Model.Id != 0)
+                        {
+                            <partial name="_EditAndBackToListButton" model="Model.Id" />
+                        }
+                        else
+                        {
+                            <partial name="_CreateAndBackToListButton" />
+                        }
                     </div>
                 </div>
             </div>
-            <!---------------------------------------------->
-            <!---------------------------------------------->
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                <div class="">
-                    <label asp-for="CenterType">Center Type</label>
-                </div>
-                <div class="">
-                    <input asp-for="CenterType" class="form-control" />
-                    <span asp-validation-for="CenterType"></span>
-                </div>
-            </div>
-            <!---------------------------------------------->
-            <!---------------------------------------------->
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                <div class="">
-                    <label asp-for="VolunteerId">Volunteer Id</label>
-                </div>
-                <div class="">
-                    <input asp-for="VolunteerId" class="form-control" />
-                    <span asp-validation-for="VolunteerId"></span>
-                </div>
-            </div>
-            <!---------------------------------------------->
-            <!---------------------------------------------->
-
-            <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <div class="">
-                        <label asp-for="IsOpen">Open</label>
-                    </div>
-                    <div class="">
-                        <input asp-for="IsOpen" class="form-control" />
-                        <span asp-validation-for="IsOpen"></span>
-                    </div>
-                </div>
-            </div>
-        <!---------------------------------------------->
-    </div>
-
-    <div class="row">
-
-        @if (Model.Id != 0)
-        {
-            <partial name="_EditAndBackToListButton" model="Model.Id" />
-        }
-        else
-        {
-            <partial name="_CreateAndBackToListButton" />
-        }
-    </div>
-    <!---------------------------------------------->
-
-
-
-</form>
+        </div>
+    </form>
 
 @section scripts
 {
