--- a/VMS/Views/Shared/_CreateAndBackToListButton.cshtml
+++ b/VMS/Views/Shared/_CreateAndBackToListButton.cshtml
@@ -1,8 +1,9 @@
-﻿<div class="container">
-    <div class="row">
-        <div>
-            <button type="submit" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 btn btn btn-primary form-control">Create</button>
-            <a asp-action="Index" class=" col-lg-12 col-md-12 col-sm-12 col-xs-12 btn btn-success form-control">Back to List</a>
-        </div>
+﻿
+<div class="row">
+    <div class="col">
+        <button type="submit" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 btn btn btn-primary form-control">Create</button>
     </div>
- </div>
+    <div class="col">
+        <a asp-action="Index" class=" col-lg-12 col-md-12 col-sm-12 col-xs-12 btn btn-success form-control">Back to List</a>
+    </div>
+</div>
