--- a/VMS/Views/Shared/_EditAndBackToListButton.cshtml
+++ b/VMS/Views/Shared/_EditAndBackToListButton.cshtml
@@ -1,10 +1,10 @@
-﻿@model int
-    <div class="">
-        <div class="">
-            <button type="submit" class="btn btn-primary form-control" asp-route-id="@Model">Update</button>
-        </div>
-        <br>
-        <div class="">
-            <a asp-action="Index" class="btn btn-success form-control">Back to List</a>
-        </div>
+﻿
+@model int
+<div class="row">
+    <div class="col">
+        <button type="submit" class="btn btn-primary form-control" asp-route-id="@Model">Update</button>
     </div>
+    <div class="col">
+        <a asp-action="Index" class="btn btn-success form-control">Back to List</a>
+    </div>
+</div>
